# sentence-flashcard

./: .gitignore  README.md  change_sentence_audio.py  export.py  pre-install.py  pyproject.toml  run.py  update_sentence_audio.py
pycards/: __init__.py  app.py  config.py  main.py  models.py  routes.py  schema.sql
pycards/language/: english.py
pycards/mdict_query/: index_builder.py  mdict_dir.py  mdict_utils.py  readmdict.py
pycards/routes/: home.py  sentence.py  word.py
pycards/static/: home.css  table.css
pycards/templates/: excerpts.html  header.html  hello.html  home.html  manage_sentences.html  sentences.html  single_sentence.html  words.html
